--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.3.5",
+    "@reduxjs/toolkit": "^1.5.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "jest-enzyme": "^7.1.2",
     "jsdom": "^16.2.2",
     "react": "16.11.0",
     "react-dom": "^16.13.1",
-    "react-native": "0.62.1",
+    "react-native": "^0.64.0",
     "react-native-elements": "^1.2.7",
     "react-native-vector-icons": "^6.6.0",
+    "react-redux": "^7.2.3",
     "react-router-native": "^5.1.2"
   },
   "devDependencies": {
